--- a/style.css
+++ b/style.css
@@ -56,16 +56,28 @@ body {
     opacity: 1;
 }
 
-
 header {
+    position: sticky;
+    top: 30px; /* Немного отступа сверху */
+    width: 90%;
+    padding: 10px 20px;
     display: flex;
-    justify-content: space-between; /* Раздвигаем элементы по краям */
-    align-items: center; /* Выравниваем элементы по вертикали */
-    padding: 30px; /* Добавляем отступы */
+    justify-content: space-between;
+    align-items: center;
     font-weight: bold;
     text-transform: uppercase;
-    max-width: 100%; /* Растягиваем header на всю ширину */
-    font-size: 24px;
+    border-radius: 15px;
+    transition: all 0.4s ease-in-out;
+    z-index: 1000;
+    margin: 0 auto;
+}
+
+/* Стиль, который появится при прокрутке */
+header.scrolled {
+    background: rgba(62, 62, 62, 0.6); /* Полупрозрачный эффект */
+    backdrop-filter: blur(10px); /* Размытие для эффекта стекла */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    padding: 15px 25px;
 }
 
 .contact img {
@@ -234,6 +246,7 @@ html {
     justify-content: center; /* Центрируем по вертикали */
     align-items: center; /* Центрируем по горизонтали */
     text-align: center;
+    flex-wrap: wrap;
     margin-top: 50px;
     padding: 50px 20px;
     height: 85vh;
@@ -248,6 +261,11 @@ html {
 }
 
 @media (max-width: 480px) {
+    
+    header.scrolled {
+        padding: 10px 15px;
+    }
+    
     .contact img {
         width: 35px;
     }
@@ -255,7 +273,7 @@ html {
     .hero {
         padding: 30px 15px;
         text-align: center;
-        height: 75vh;
+        height: 85vh;
     }
     
     /* Добавляем псевдоэлемент для фонового градиента */
